--- a/src/templates/home_page.html
+++ b/src/templates/home_page.html
@@ -7,8 +7,19 @@
 </head>
 <body>
   <div class="text-center">
-    <h1>Hello World, we are working</h1>
+        <h1>{{ title }}</h1>
+        <h3>{{ content }}</h3>
   </div>
+  <div class='container'>
+    {% if premium_content %}
+      <div class="row">
+        <div class="col">
+          <h2>Premium Content</h2>
+          <p>{{ premium_content }}</p>
+        </div>
+      </div>
+    {% endif %}
+</div>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
