Refactored html files to use a common base template

--- a/src/products/templates/products/detail.html
+++ b/src/products/templates/products/detail.html
@@ -1,5 +1,9 @@
-{{ object.title }} </br> 
-{{ object.desc }} </br> 
-{% if object.image %}
-<img src="{{ object.image.url }}" class='img-fluid' alt=""/>
-{% endif %}
+{% extends 'base.html' %}
+
+{% block content %}
+  {{ object.title }} </br>
+  {{ object.desc }} </br> 
+  {% if object.image %}
+  <img src="{{ object.image.url }}" class='img-fluid' alt=""/>
+  {% endif %}
+{% endblock %}
