--- a/src/templates/home_page.html
+++ b/src/templates/home_page.html
@@ -1,4 +1,29 @@
+{% extends 'base.html' %}
 {% load static %}
+
+<title>Home Page Template</title>
+
+{% block base_head %}
+  <link rel="stylesheet" href='{% static "css/main.css"%}'>
+{% endblock%}
+
+{% block content %}
+  <div class="text-center">
+    <h1>{{ title }}</h1>
+    <h3>{{ content }}</h3>
+  </div>
+  <div class='container'>
+  {% if premium_content %}
+  <div class="row">
+    <div class="col">
+      <h2>Premium Content</h2>
+      <p>{{ premium_content }}</p>
+    </div>
+  </div>
+{% endif %}
+</div>
+{% endblock %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,20 +38,7 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="text-center">
-        <h1>{{ title }}</h1>
-        <h3>{{ content }}</h3>
-  </div>
-  <div class='container'>
-    {% if premium_content %}
-      <div class="row">
-        <div class="col">
-          <h2>Premium Content</h2>
-          <p>{{ premium_content }}</p>
-        </div>
-      </div>
-    {% endif %}
-</div>
+
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
