--- a/src/products/templates/products/list.html
+++ b/src/products/templates/products/list.html
@@ -1,3 +1,14 @@
-{% for obj in object_list %}
-<a href='{{ obj.get_absoulte_url }}'>{{ obj.title }}</a><br>
-{% endfor %}
+{% extends 'base.html' %}
+
+{% block content%}
+  <div class="container">
+    <div class="row">
+      {% for obj in object_list %}
+        <div class="col">
+          {% include 'products/snippets/card.html' with instance=obj%}
+        </div>
+      </div>
+      {% endfor %}
+    </div>
+  </div>
+{% endblock %}
