Added code for basic search app

--- a/src/products/templates/products/detail.html
+++ b/src/products/templates/products/detail.html
@@ -1,9 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  {{ object.title }} </br>
-  {{ object.desc }} </br> 
-  {% if object.image %}
-  <img src="{{ object.image.url }}" class='img-fluid' alt=""/>
-  {% endif %}
+  <div class="row">
+    <div class="col">
+      <h1>{{ object.title }}</h1></br>
+      {{ object.desc | linebreaks }} </br> 
+      {{ object.timestamp | timesince }} ago
+      {% if object.image %}
+      <img src="{{ object.image.url }}" class='img-fluid' alt=""/>
+      {% endif %}
+    </div>
+  </div>
 {% endblock %}
