--- a/src/search/templates/search/view.html
+++ b/src/search/templates/search/view.html
@@ -1,10 +1,25 @@
 {% extends 'base.html' %}
 
 {% block content%}
+<div class="row mb-3">
+  {% if query %}
+  <div class="col-12">
+      Results for {{ query }}
+      <hr/>
+  </div>
+  {% else %}
+    <div class="col-12 col-md-6 mx-auto py-4">
+      <input class='form-control' type="text" placeholder="Search">
+    </div>
+    <div class="col-12">
+      <hr/>
+    </div>
+  {% endif %}
+</div>
+
     <div class="row">
       {% for obj in object_list %}
         <div class="col">
-          {{ forloop.counter }}
           {% include 'products/snippets/card.html' with instance=obj%}
           {% if forloop.counter|divisibleby:2 %}
           </div></div><div class="row"><div class="col-12"><hr/></div>
