--- a/src/templates/auth/login.html
+++ b/src/templates/auth/login.html
@@ -1,4 +1,9 @@
-<form method="POST"> {% csrf_token %}
-  {{ form }}
-  <button type="submit" class="btn btn-default">Submit</button>
-</form>
+{% extends 'base.html' %}
+
+{% block content %}
+  <h2>Login</h2>
+  <form method="POST"> {% csrf_token %}
+    {{ form }}
+    <button type="submit" class="btn btn-default">Submit</button>
+  </form>
+{% endblock %}
