--- a/src/templates/auth/register.html
+++ b/src/templates/auth/register.html
@@ -1,4 +1,9 @@
+{% extends 'base.html' %}
+
+{% block content %}
+  <h2>Register</h2>
 <form method="POST"> {% csrf_token %}
   {{ form }}
   <button type="submit" class="btn btn-default">Submit</button>
 </form>
+{% endblock %}
