Created update-cart form to enable adding and removal of products

--- a/src/products/templates/products/detail.html
+++ b/src/products/templates/products/detail.html
@@ -13,11 +13,8 @@
     </div>
 
     <div class="col-12 col-md-6">
-      {% if object in cart.products.all %}
-      In Cart <button class='btn btn-link'>Remove ?</button>
-      {% else %}
-      <button class='btn btn-success'>Add to Cart</button>
-      {% endif %}
+      {% include 'products/snippets/update-cart.html' with product=object cart=cart %}
+
     </div>
   </div>
 {% endblock %}
