--- a/src/products/templates/products/snippets/update-cart.html
+++ b/src/products/templates/products/snippets/update-cart.html
@@ -1,9 +1,13 @@
 <form method='POST' action='{% url "cart:update" %}' class="form my-2 my-lg-0"> {% csrf_token %}
   <input type="hidden" name='product_id' value='{{ product.id }}'/>
 
-  {% if product in cart.products.all %}
-    In Cart <button type='submit' class='btn btn-link'>Remove ?</button>
+  {% if in_cart%}
+    <button type='submit' class="btn btn-link btn-sm" style="padding: 0px; cursor: pointer;">Remove?</button>
   {% else %}
-    <button type='submit' class='btn btn-success'>Add to Cart</button>
+    {% if product in cart.products.all %}
+      In Cart <button type='submit' class='btn btn-link'>Remove ?</button>
+    {% else %}
+      <button type='submit' class='btn btn-success'>Add to Cart</button>
+    {% endif %}
   {% endif %}
 </form>
