--- a/src/templates/base/navbar.html
+++ b/src/templates/base/navbar.html
@@ -3,6 +3,7 @@
 {% url 'about' as about_url %}
 {% url 'login' as login_url %}
 {% url 'register' as register_url %}
+{% url 'cart:home' as cart_url %}
 {% url 'products:list' as product_list_url %}
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
@@ -13,7 +14,7 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
+    
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item {% if request.path == home_url %}active{%  endif %}">
@@ -25,11 +26,17 @@
         <li class="nav-item {% if request.path == about_url %}active{% endif %}">
           <a class="nav-link" href="{{ about_url }}">About</a>
         </li>
+        <li class="nav-item {% if request.path == product_list_url %}active{% endif %}">
+          <a class="nav-link" href="{% url 'products:list' %}">Product</a>
+        </li>
+        <li class="nav-item {% if request.path == login_url %}active{% endif %}">
+          <a class="nav-link" href="{{ cart_url }}">{{ request.session.cart_items }} <i class="fas fa-shopping-cart"></i></a>
+        </li>
         {% if request.user.is_authenticated %}
           <li class="nav-item {% if request.path == login_url %}active{% endif %}">
             <a class="nav-link" href="{{ login_url }}">Logout</a>
           </li>
-        {% else %}
+          {% else %}
         <li class="nav-item {% if request.path == register_url %}active{% endif %}">
           <a class="nav-link" href="{{ register_url }}">Register</a>
         </li>
@@ -37,9 +44,6 @@
           <a class="nav-link" href="{{ login_url }}">Login</a>
         </li>
         {% endif %}
-        <li class="nav-item {% if request.path == product_list_url %}active{% endif %}">
-          <a class="nav-link" href="{% url 'products:list' %}">Product</a>
-        </li>
       </ul>
       {% include 'search/snippets/search-form.html' %}
     </div>
