--- a/src/carts/templates/carts/checkout.html
+++ b/src/carts/templates/carts/checkout.html
@@ -2,8 +2,8 @@
 {% block content %}
 <p class='lead'>{{ object.order_id }} --- {{ object.cart }}</p>
 {% if not billing_profile %}
-<h3>Checkout</h3>
-<div class="row text-center">
+  <h3>Checkout</h3>
+  <div class="row text-center">
   <div class="col-12 col-md-6">
     <p class="lead">Login</p>
     {% include 'accounts/snippets/form.html' with form=login_form next_url=request.build_absolute_uri %}
@@ -15,8 +15,29 @@
     </div>
   </div>
 {% else %}
-  <p>Cart Total : {{ object.cart.total }}</p>
-  <p>Shipping Total : {{ object.shipping_total }}</p>
-  <p>Order Total : {{ object.total }}</p>
+  {% if not object.shipping_address %}
+    <div class="row">
+      <div class="col-md-6 mx-auto col-10">
+        <p class="lead">Shipping Address</p>
+        <hr/>
+        {% url 'checkout_address_create' as checkout_address_create %}
+        {% include 'addresses/form.html' with form=address_form next_url=request.build_absolute_uri action_url=checkout_address_create address_type='shipping'%}
+      </div>
+    </div>
+  {% elif not object.billing_address%}
+    <div class="row">
+      <div class="col-md-6 mx-auto col-10">
+        <p class="lead">Billing Address</p>
+        <hr/>
+        {% url 'checkout_address_create' as checkout_address_create %}
+        {% include 'addresses/form.html' with form=address_form next_url=request.build_absolute_uri action_url=checkout_address_create address_type='billing'%}
+      </div>
+    </div>
+
+  {% else %}
+    <p>Cart Total : {{ object.cart.total }}</p>
+    <p>Shipping Total : {{ object.shipping_total }}</p>
+    <p>Order Total : {{ object.total }}</p>
+  {% endif %}
 {% endif %}
 {% endblock %}
