--- a/src/carts/templates/carts/checkout.html
+++ b/src/carts/templates/carts/checkout.html
@@ -24,7 +24,7 @@
         {% include 'addresses/form.html' with form=address_form next_url=request.build_absolute_uri action_url=checkout_address_create address_type='shipping'%}
       </div>
     </div>
-  {% elif not object.billing_address%}
+  {% elif not object.billing_address %}
     <div class="row">
       <div class="col-md-6 mx-auto col-10">
         <p class="lead">Billing Address</p>
@@ -33,11 +33,11 @@
         {% include 'addresses/form.html' with form=address_form next_url=request.build_absolute_uri action_url=checkout_address_create address_type='billing'%}
       </div>
     </div>
-
   {% else %}
     <p>Cart Total : {{ object.cart.total }}</p>
     <p>Shipping Total : {{ object.shipping_total }}</p>
     <p>Order Total : {{ object.total }}</p>
+    <button>Checkout</button>
   {% endif %}
 {% endif %}
 {% endblock %}
