--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -20,5 +20,64 @@
     </div>
 
     {% include 'base/js.html' %}
+    <script>
+      $(document).ready(function(){
+        let prodcutForm = $('.form-product-add-ajax')
+        prodcutForm.submit(function(event){
+          event.preventDefault();
+          const thisForm = $(this);
+          // const actionEndpoint = thisForm.attr('action');
+          const actionEndpoint = thisForm.attr('data-endpoint');
+          const httpMethod = thisForm.attr('method');
+          const formData = thisForm.serialize();
+          $.ajax({
+            url: actionEndpoint,
+            method: httpMethod,
+            data: formData,
+            success: function(data){
+              const submitSpan = thisForm.find('.submit-span');
+              if(data.added){
+                submitSpan.html("In Cart <button type='submit' class='btn btn-link'>Remove ?</button>");
+              }else{
+                submitSpan.html("<button type='submit' class='btn btn-success'>Add to Cart</button>");
+              }
+
+              const navbarCount = $('.navbar-cart-count')
+              navbarCount.text(data.cartItemCount);
+              if(window.location.href.indexOf('cart') != -1){
+                refreshCart();
+              }
+
+            },
+            error: function(errorData){
+              console.log(`error: ${errorData}`);
+            }
+          });
+        })
+
+        function refreshCart(){
+          const cartTable = $('.cart-table');
+          const cartBody = cartTable.find('.cart-body');
+          cartBody.html("<h1>Changed</h1>");
+          
+          const refreshCartUrl =  '/api/cart';
+          const refreshCartMethod = 'GET';
+          $.ajax({
+            url: refreshCartUrl,
+            method: refreshCartMethod,
+            data: {},
+            success: function(data){
+              console.log('success');
+            },
+            error: function(errorData){
+              console.log('errorRefresh',errorData);
+            }
+          }
+          );
+
+        }
+      })
+
+    </script>
   </body>
 </html>
