--- a/src/templates/base/navbar.html
+++ b/src/templates/base/navbar.html
@@ -31,7 +31,7 @@
           <a class="nav-link" href="{% url 'products:list' %}">Product</a>
         </li>
         <li class="nav-item {% if request.path == login_url %}active{% endif %}">
-          <a class="nav-link" href="{{ cart_url }}">{{ request.session.cart_items }} <i class="fas fa-shopping-cart"></i></a>
+          <a class="nav-link" href="{{ cart_url }}"><span class='navbar-cart-count'>{{ request.session.cart_items }} </span><i class="fas fa-shopping-cart"></i></a>
         </li>
         {% if request.user.is_authenticated %}
           <li class="nav-item {% if request.path == logout_url %}active{% endif %}">
