--- a/src/carts/templates/carts/home.html
+++ b/src/carts/templates/carts/home.html
@@ -13,22 +13,22 @@
       </tr>
     </thead>
     <tbody class='cart-body'>
-      {% for product in cart.products.all %}
-        <tr>
+        {% for product in cart.products.all %}
+        <tr class='cart-product'>
           <th scope="row">{{ forloop.counter }}</th>
           <td><a href='{{ product.get_absolute_url }}'>{{ product.name}}</a>
             {% include 'products/snippets/update-cart.html' with product=product cart=cart in_cart=True %}
           </td>
           <td>{{product.price}}</td>
         </tr>
-      {% endfor %}
-      <tr>
+        {% endfor %}
+        <tr>
         <td colspan="2"></td>
-        <td><b>Sub Total</b> {{ cart.subtotal }}</td>
+        <td><b>Sub Total</b> <span class='cart-subtotal'>{{ cart.subtotal }}</span></td>
       </tr>
       <tr>
         <td colspan="2"></td>
-        <td><b>Total</b> {{ cart.total }}</td>
+        <td><b>Total</b> <span class='cart-total'>{{ cart.total }}</span></td>
       </tr>
       <tr>
         <td colspan="2"></td>
