--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -44,10 +44,10 @@
 
               const navbarCount = $('.navbar-cart-count')
               navbarCount.text(data.cartItemCount);
-              if(window.location.href.indexOf('cart') != -1){
+              const currentUrl = window.location.href;
+              if(currentUrl.indexOf('cart') != -1){
                 refreshCart();
-              }
-
+              } 
             },
             error: function(errorData){
               console.log(`error: ${errorData}`);
@@ -58,23 +58,36 @@
         function refreshCart(){
           const cartTable = $('.cart-table');
           const cartBody = cartTable.find('.cart-body');
-          cartBody.html("<h1>Changed</h1>");
-          
-          const refreshCartUrl =  '/api/cart';
+          const productRows = cartBody.find('cart-product');
+          const currentUrl = window.location.href;
+          const refreshCartUrl = '/api/cart/';
           const refreshCartMethod = 'GET';
           $.ajax({
             url: refreshCartUrl,
             method: refreshCartMethod,
             data: {},
             success: function(data){
-              console.log('success');
+              console.log('successRefresh');
+              console.log(data);
+              if(data.products.lenght > 0){
+                productRows.html(" ")
+                i=data.products.lenght;
+                $.each(data.products, function(index, value){
+                  console.log(value);
+                  cartBody.prepend(`<tr><th scope="row">${i}</th><td><a href='${value.url}'>${value.name}</a> </td><td>${value.price}</td></tr>`);
+                  i--
+                });
+                // productRows.html("<tr><td colspan=3>Coming Soon</td></tr>");
+                cartBody.find('.cart-subtotal').text(data.subtotal);
+                cartBody.find('.cart-total').text(data.total);
+              }else{
+                window.location.href = currentUrl;
+              }
             },
             error: function(errorData){
               console.log('errorRefresh',errorData);
             }
-          }
-          );
-
+          });
         }
       })
 
