Moved the remove items portion from products to cart app. finalized the ajax port of cart display

--- a/src/carts/templates/carts/home.html
+++ b/src/carts/templates/carts/home.html
@@ -17,7 +17,7 @@
         <tr class='cart-product'>
           <th scope="row">{{ forloop.counter }}</th>
           <td><a href='{{ product.get_absolute_url }}'>{{ product.name}}</a>
-            {% include 'products/snippets/update-cart.html' with product=product cart=cart in_cart=True %}
+            {% include 'carts/snippets/remove_product.html' with product_id=product.id %}
           </td>
           <td>{{product.price}}</td>
         </tr>
@@ -36,6 +36,9 @@
       </tr>
     </tbody>
   </table> 
+<div class="cart-item-remove-form" style="display:none">
+  {% include 'carts/snippets/remove_product.html' %}
+</div>
 {% else %}
   <p class="lead">Cart is empty</p>
 {% endif %}
