--- a/src/templates/base/css.html
+++ b/src/templates/base/css.html
@@ -5,3 +5,6 @@
 
  <!-- Font awesome CDN -->
  <script src="https://kit.fontawesome.com/ffcbe83800.js" crossorigin="anonymous"></script>
+
+<!-- Jquery confirm -->
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
