--- a/src/templates/contact/view.html
+++ b/src/templates/contact/view.html
@@ -7,10 +7,10 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-sm-6 col-12">
+      <div class="col-md-6 col-12 mx-auto">
         <div class="col">
           <p>{{ content }}</p>
-          <form method="POST"> {% csrf_token %}
+          <form class='contact-form' method="POST" action='{% url "contact" %}'> {% csrf_token %}
             {{ form }}
             <button type="submit" class="btn btn-default">Submit</button>
           </form>
